Added second level, bug fixes

--- a/TODO.txt
+++ b/TODO.txt
@@ -29,3 +29,14 @@
  > Culture => Faith + Beauty
  
  
+-- Music --
+http://incompetech.com/music/royalty-free/index.html/index.html?genre=Classical
+Ranz des Vaches
+Agnus Dei X
+Ghost Dance
+Danse Macabre - No Violin
+Divertimento K131
+Trio for Piano Violin and Viola
+Sonatina in C Minor
+Brandenburg Concerto No. 4 in G, Movement I (Allegro), BWV 1049
+Sheep May Safely Graze - BWV 208
