--- a/TODO.txt
+++ b/TODO.txt
@@ -40,3 +40,13 @@ Trio for Piano Violin and Viola
 Sonatina in C Minor
 Brandenburg Concerto No. 4 in G, Movement I (Allegro), BWV 1049
 Sheep May Safely Graze - BWV 208
+
+
+
+-- TODO -- 
+> Lock unavailable cities on map screen
+> Game options dialog
+> Level creation
+> First city / tutorial intro interstitial 
+> Story line?
+
