--- a/TODO.txt
+++ b/TODO.txt
@@ -50,6 +50,9 @@ Sheep May Safely Graze - BWV 208
 > First city / tutorial intro interstitial 
 > Story line?
 + Sound effects  (http://www.bfxr.net/)
+> Credits Page
+
+
 
 
 -- Rank Progression --
@@ -87,6 +90,21 @@ https://en.wikipedia.org/wiki/Orders,_decorations,_and_medals_of_the_United_King
 
 
 
+-- Blog Posts --
+Inspiration (Civ V, Caesar III, Vectorian)
+Hex Map and Tiles (multipart?)
+Design Direction
+Soundtrack
+Background Music code 
+Map 
+Interstitial
+Splash Page
+Buildings
+Help Dialog
+Terrain
+City Score / Victory Conditions
+Level Editor
+Sound Effects
 
 
 
