Finished help and fixed bugs

--- a/TODO.txt
+++ b/TODO.txt
@@ -145,6 +145,39 @@ Become
 Lord Mayor
 
 
+-- Sales / Marketing --
+Sales: https://indiegamestand.com/developerSignUp.php
+Review: http://indiegamereviewer.com/contact-indie-game-reviewer/
+Review: https://www.rockpapershotgun.com/hey-prs-and-developers/
+Marketing: http://www.indiegamegirl.com/press-release-example/
+
+
+
 editors@indiegames.com
 news@gamasutra.com
+contact@gamejolt.com
+stuff@haymarket.com
+editors@indiegamemag.com
+tips@kotaku.com
+tyler@pcgamer
+tips@destructoid.com
+press@theindiemine.com
+contact@game-sphere.fr
+contact@usgamer.net
+contact@eurogamer.net
+news@pocketgamer.co.uk
+pr@gamewatcher.com
+1UPfeedback@ign.com
+editorial@metacritic.com
+trailers@gametrailers.com
+webmaster@g4tv.com
+
+http://www.cnet.com/profiles/jbakalar/
+http://www.jumptogamer.com/contact-us/
+http://duuro.net/contact/
+http://www.polygon.com/pages/contact
+http://gamerwife.com/about/contact/
+
+@GameSpy
+@DJGameCentral
 
