--- a/TODO.txt
+++ b/TODO.txt
@@ -66,7 +66,7 @@ https://commons.wikimedia.org/wiki/Commons:Free_media_resources/Music
 -- TODO -- 
 + Lock unavailable cities on map screen
 + Game options dialog
-> Level creation
++ Level creation
 > First city / tutorial intro interstitial 
 + Story line?
 + Sound effects  (http://www.bfxr.net/)
